<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical" 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
        <TableRow android:layout_marginBottom="2dip"
            android:layout_width="fill_parent">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/profile_email" />
                <TextView android:id="@+id/profile_email" 
                    android:scrollbars="vertical" 
                    android:layout_width="fill_parent" 
                    android:layout_height="40px"/>

                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/profile_first_name" />
                <EditText android:id="@+id/profile_first_name" 
                    android:scrollbars="vertical" 
                    android:layout_height="40px" 
                    android:layout_width="fill_parent"/>

                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/profile_last_name" />
                <EditText android:id="@+id/profile_last_name" 
                    android:scrollbars="vertical" 
                    android:layout_height="40px" 
                    android:layout_width="fill_parent"/>

                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/profile_nick_name" />
                <EditText android:id="@+id/profile_nick_name" 
                    android:scrollbars="vertical" 
                    android:layout_height="40px" 
                    android:layout_width="fill_parent"/>

                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:text="@string/profile_comment" />
                <EditText android:id="@+id/profile_comment" 
                    android:scrollbars="vertical" 
                    android:layout_height="80px" 
                    android:layout_width="fill_parent"/>

            </LinearLayout>
        </TableRow>
    
        <TableRow android:layout_marginBottom="2dip" 
            android:gravity="bottom"
            android:layout_width="fill_parent">
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	            android:orientation="vertical" 
	            android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"
                android:shrinkColumns="*"  
                android:stretchColumns="*" android:layout_gravity="bottom">
                <TableRow android:layout_marginBottom="2dip"
                    android:layout_width="fill_parent">
                    <Button android:id="@+id/profile_button_save" 
                        android:layout_height="wrap_content" 
                        android:text="@string/save" 
                        android:layout_width="fill_parent" />
                    <Button android:id="@+id/profile_button_cancel" 
                        android:text="@string/cancel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
</ScrollView>
