<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical" 
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1" >
        <TableRow android:layout_marginBottom="2dip"
                  android:layout_width="fill_parent">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1" >
    
                <TextView android:layout_width="fill_parent"
                          android:layout_height="wrap_content" 
                          android:text="@string/mail_username" />
                <EditText android:id="@+id/mail_username" 
                          android:scrollbars="vertical" 
                          android:imeOptions="actionNext"
                          android:layout_width="fill_parent" 
                          android:layout_height="wrap_content"/>

                <TextView android:layout_width="fill_parent"
                          android:layout_height="wrap_content" 
                          android:text="@string/mail_password" />
                <EditText android:id="@+id/mail_password"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:imeOptions="actionDone"
                          android:scrollbars="vertical"
                          android:password="true" />

            </LinearLayout>
        </TableRow>
    
        <TableRow android:layout_marginBottom="2dip" 
                  android:gravity="bottom"
                  android:layout_width="fill_parent">
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:orientation="vertical" 
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:shrinkColumns="*"  
                         android:stretchColumns="*" 
                         android:layout_weight="1" >
                <TableRow android:layout_marginBottom="2dip"
                          android:layout_width="fill_parent">
                    <Button android:id="@+id/mail_properties_button_test" 
                            android:text="@string/test"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    <Button android:id="@+id/mail_properties_button_advanced" 
                            android:text="@string/advanced"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    <Button android:id="@+id/mail_properties_button_save" 
                            android:layout_height="wrap_content" 
                            android:text="@string/save" 
                            android:layout_width="fill_parent" />
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
</ScrollView>
