<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_weight="1" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical" 
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1" >
        <TableRow android:layout_marginBottom="2dip"
                  android:layout_width="fill_parent">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical" 
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical" 
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:background="#FF222222" 
                          android:layout_weight="1">
     
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content" 
                          android:text="@string/mail_username"
                          android:padding="3dip" />
                <EditText android:id="@+id/mail_username"
                          android:imeOptions="actionNext"
                          android:padding="3dip" 
                          android:layout_width="fill_parent" 
                          android:layout_height="wrap_content"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content" 
                          android:text="@string/mail_password"
                          android:padding="3dip" />
                <EditText android:id="@+id/mail_password"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:password="true"
                          android:imeOptions="actionNext"
                          android:padding="3dip" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical" 
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:background="#FF555555" 
                          android:layout_weight="1">
                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                             android:orientation="vertical" 
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1">
                    <TableRow android:layout_marginBottom="2dip"
                              android:layout_width="fill_parent">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_smtp_host"
                                  android:padding="3dip" />
                        <EditText android:id="@+id/mail_smtp_host"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:padding="3dip"
                                  android:layout_weight="1" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="2dip"
                              android:layout_width="fill_parent">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_smtp_port"
                                  android:padding="3dip" />
                        <EditText android:id="@+id/mail_smtp_port"
                                  android:layout_width="80px"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:numeric="integer"
                                  android:padding="3dip" />
                    </TableRow>

                    <TableRow>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_smtp_auth"
                                  android:padding="3dip" />
                        <CheckBox android:id="@+id/mail_smtp_auth"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:padding="3dip" />
                    </TableRow>

                    <TableRow>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_smtp_start_tls_enable"
                                  android:padding="3dip" />
                        <CheckBox android:id="@+id/mail_smtp_start_tls_enable"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:padding="3dip" />
                    </TableRow>
                </TableLayout>

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                             android:orientation="vertical" 
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1">
                    <TableRow android:layout_marginBottom="2dip"
                              android:layout_width="fill_parent">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_smtp_socket_factory_port"
                                  android:padding="3dip" />
                        <EditText android:id="@+id/mail_smtp_socket_factory_port"
                                  android:layout_width="80px"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:numeric="integer"
                                  android:padding="3dip" />
                    </TableRow>
                </TableLayout>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content" 
                          android:text="@string/mail_smtp_socket_factory_class"
                          android:padding="3dip" />
                <EditText android:id="@+id/mail_smtp_socket_factory_class"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:imeOptions="actionNext"
                          android:padding="3dip" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical" 
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:background="#FF222222" 
                          android:layout_weight="1">
                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                             android:orientation="vertical" 
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1">
                    <TableRow android:layout_marginBottom="2dip"
                              android:layout_width="fill_parent">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_imap_host"
                                  android:padding="3dip" />
                        <EditText android:id="@+id/mail_imap_host"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionNext"
                                  android:padding="3dip" 
                                  android:layout_weight="1" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="2dip"
                              android:layout_width="fill_parent">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" 
                                  android:text="@string/mail_imap_port"
                                  android:padding="3dip" />
                        <EditText android:id="@+id/mail_imap_port"
                                  android:layout_width="80px"
                                  android:layout_height="wrap_content"
                                  android:imeOptions="actionDone"
                                  android:numeric="integer"
                                  android:padding="3dip" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            </LinearLayout>
        </TableRow>
    
        <TableRow android:layout_marginBottom="2dip" 
                  android:gravity="bottom"
                  android:layout_width="fill_parent"
                  android:background="#FF222222" 
                  >
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:orientation="vertical" 
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:shrinkColumns="*"  
                         android:stretchColumns="*"
                         android:layout_weight="1">
                <TableRow android:layout_marginBottom="2dip">
                    <Button android:id="@+id/mail_properties_button_test" 
                            android:text="@string/test"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    <Button android:id="@+id/mail_properties_button_save" 
                            android:text="@string/save"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
</ScrollView>
